sonar pass 10: math.clamp, untangle nested ternaries, declare utility class constructors private